# rust-mock-store

./: .gitignore  Cargo.toml  README.md
examples/: dev.rs  readme.rs
src/: error.rs  lib.rs  store.rs
tests/: test_crud.rs
tests/common/: mod.rs
