[package]
name = "mock-store"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple Rust in-memory mock-store for testing and prototyping (with modql support)."
categories = ["development-tools::testing"]
keywords = [
  "test",
	"query-language",
	"model",
	"data-model",
	"graphql"
]
homepage = "https://github.com/jeremychone/rust-mock-store"
repository = "https://github.com/jeremychone/rust-mock-store"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde/json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Modql
modql = "0.2.0"


[dev-dependencies]
anyhow = "1"
